--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,10 @@ export(FSFDR.indept.cv)
 export(FSFDR.indept.p.adjust)
 export(FSFWER.arbidept.cv)
 export(FSFWER.arbidept.p.adjust)
+export(FSmdFWER.arbidept.cv)
+export(FSmdFWER.arbidept.p.adjust)
+export(FSmdFWER.indept.cv)
+export(FSmdFWER.indept.p.adjust)
 export(bisection.FDR)
 export(bisection.FWER)
 export(optim.accept.adjp)
