--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,21 @@
 Package: FixSeqMTP
 Type: Package
 Title: Fixed Sequence Multiple Testing Procedures
-Version: 0.1.0
-Suggests: multxpert, multcomp, MHTdiscrete
+Version: 0.1.2
+Suggests:
+    multxpert,
+    multcomp,
+    MHTdiscrete
 Author: Yalin Zhu, Wenge Guo
 Maintainer: Yalin Zhu <yalin.zhu@outlook.com>
 BugReports: https://github.com/allenzhuaz/FixSeqMTP/issues
-Description: The FixSeqMTP package is designed to test a sequence of pre-
-    ordered hypotheses using several generalized Fixed Sequence Multiple Testing
-    Procedures (g-FSMTPs). The proposed three FWER controlling g-FSMTPs utilize
-    numbers of rejections and acceptances, all of the procedures are designed under
-    arbitrary dependence. The proposed two FDR controlling g-FSMTPs allows more but
-    a given number of acceptances (k>=1), the procedures are designed for arbitrary
-    dependence and independence. The main functions for each proposed g-FSMTPs are
-    designed to calculate adjusted p-values and critical values, respectively. For
-    users' convenience, the output results also include the option of decision rules
-    for convenience.
+Description: Several generalized/directional Fixed Sequence Multiple Testing Procedures (g-
+    FSMTPs/d-FSMTPs) are developed for testing a sequence of pre-ordered hypotheses while
+    controlling the FWER, FDR and Directional Error (mdFWER). All three FWER controlling g-FSMTPs are designed under arbitrary dependence, which allow any number of acceptances. Two FDR controlling g-FSMTPs are respectively designed under arbitrary dependence and independence, which allow more but a given number of acceptances. Two mdFWER controlling d-FSMTPs are respectively designed under arbitrary dependence and independence, which can also make directional decisions based on the signs of the test statistics. The main
+    functions for each proposed g-FSMTPs are designed to calculate adjusted p-values
+    and critical values, respectively. For users' convenience, the output results
+    also include the option of decision rules for convenience.
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: TRUE
+RoxygenNote: 5.0.1
